--- a/Areas/Admin/Views/Shared/AdminScriptsPartial.cshtml
+++ b/Areas/Admin/Views/Shared/AdminScriptsPartial.cshtml
@@ -9,6 +9,7 @@
 <script src="~/js/customAdmin.js" asp-append-version="true"></script>
 <script src="~/js/adminNavPanelHiderScript.js" asp-append-version="true"></script>
 <script src="~/js/tableInit.js" asp-append-version="true"></script>
+<script src="~/js/signalr.js" asp-append-version="true"></script>
 
 
 <script src="~/js/adminPopUpScript.js" asp-append-version="true"></script>
