--- a/Areas/Admin/Views/Owner/WorkServicesView.cshtml
+++ b/Areas/Admin/Views/Owner/WorkServicesView.cshtml
@@ -42,7 +42,7 @@
                             <div class="btn-toolbar">
                                 <form method="get" id="update" area="Admin" controller="Owner" action="GetAddWorkServices">
                                     <input type="hidden" name ="id" value="@WS.ID" />
-                                    <button class="btnupd" type="submit"><i class="material-icons">done</i></button>
+                                    <button class="btn" type="submit" value="Edit">Edit</button>
                                 </form>
                                 <form method="post" id="deleteForm" action="">
                                     <input type="hidden" name="id" value="@WS.ID" />
