--- a/Views/Home/Confirm.cshtml
+++ b/Views/Home/Confirm.cshtml
@@ -31,7 +31,8 @@
 <!-- header section end -->
 
 <!-- services section start -->
-<div>
+<div class="confirm_container">
+    
     <h6 class="furnitures_text" id="confirm_head_text">Ваша заявка успешно создана</h6>
     <h1 class="dummy_text" id="confirm_text">Наши специалисты свяжутся с вами, в указанное вами время</h1>
 </div>
@@ -39,6 +40,7 @@
 
 
 <!-- services section end -->
+@await Html.PartialAsync("FooterPartial")
 <!-- copyright section start -->
 <div class="copyright_section" />
 <div class="container">
