--- a/Views/Shared/ScriptsPartial.cshtml
+++ b/Views/Shared/ScriptsPartial.cshtml
@@ -7,12 +7,9 @@
 @*<script src="~/js/jquery-3.0.0.min.js"></script>*@
 <script src="~/js/plugin.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+<script src="~/js/gallery.js" asp-append-version="true"></script>
 
-
-
-
-@*<!-- bundle -->
-<script src="~/js/scripts.bundle.min.js" asp-append-version="true"></script>*@
+<!-- bundle -->
 <!-- validations-js -->
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.10/jquery.validate.unobtrusive.min.js"></script>
@@ -21,21 +18,20 @@
 <script src="~/js/jquery.mCustomScrollbar.concat.min.js" asp-append-version="true"></script>
 <script src="~/js/custom.js" asp-append-version="true"></script>
 <!-- javascript -->
-@*<script src="~/js/owl.carousel.js" asp-append-version="true"></script>
-<script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>*@
+
 
 <!-- Swipe -->
 <script src="~/js/swiper-bundle.min.js" asp-append-version="true"></script>
 
 <!-- non-template-js -->
 <script src="~/js/entryFormScript.js" asp-append-version="true"></script>
-<script src="~/js/PhoneCallerRefScript.js" asp-append-version="true"></script>
 <script src="~/js/phoneMaskScript.js" asp-append-version="true"></script>
 <script src="~/js/showBtnScript.js" asp-append-version="true"></script>
-<script src="~/js/gallery.js" asp-append-version="true"></script>
 <script src="~/js/feedbackFormScript.js" asp-append-version="true"></script>
 <script src="~/js/stringElementCopyScript.js" asp-append-version="true"></script>
 <script src="~/js/swiperInitScript.js" asp-append-version="true"></script>
+
+@*<script src="~/js/bundle-all-custom-scripts.min.js" asp-append-version="true"></script>*@
 
 
 
