деплой, сборка продакшн версии 1.0

--- a/Views/Shared/MetaPartial.cshtml
+++ b/Views/Shared/MetaPartial.cshtml
@@ -23,7 +23,7 @@
     }
     else
     {
-        <meta name="description" content="None">
+        <meta name="description" content="none">
     }
 
     if (ViewBag.Keywords != null)
@@ -35,6 +35,6 @@
         <meta name="keywords" content="None">
     }
 }
-<meta name="author" content="Кудрявцев Дмитрий">
+<meta name="author" content="none">
 
 
