--- a/Views/Home/ServicesByID.cshtml
+++ b/Views/Home/ServicesByID.cshtml
@@ -5,16 +5,16 @@
 @await Html.PartialAsync("HeaderWithoutSliderPartial")
 
 <!-- furnitures section start -->
-<div class="furnitures_section layout_padding_2">
-    <div class="head_services" style="background-image:url('@Url.PathToUrl(Model.WorkServicesExample!.TitleImagePath!)')">
-        <h1 class="furniture_text">Lorem ipsum</h1>
-        <p class="there_text">Lorem ipsum Lorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsumLorem ipsum</p>
+<div class="furnitures_section layout_padding_2" >
+    <div class="head_services" id="imageBlock" style="background-image:url('@Url.PathToUrl(Model.WorkServicesExample!.TitleImagePath!)')">
+        <h1 class="furniture_text" id="colorReplaceH1">@Model.WorkServicesExample.Title</h1>
+        <p class="there_text" id="colorReplaceP">@Model.WorkServicesExample.Description</p>
     </div>
-    <div class="container" style="padding-top:3vh">
+    <div class="container" id="work_parent_container" style="padding-top:3vh">
         <h1 class="our_text">Перечень услуг</h1>
         <p class="ipsum_text">@Model.WorkServicesExample?.Title</p>
-        <div class="furnitures_section2 layout_padding">
-            <div class="w_serv_conteiner">
+        <div class="furnitures_section2 layout_padding" id="work_main_container">
+            <div class="w_serv_conteiner" id="work_child_container">
                 @{
                     foreach (WorksCategory category in Model.WorkServicesExample!.WorksCategories)
                     {
@@ -25,7 +25,7 @@
                                     @foreach (Work name in category.Works)
                                     {
                                             <li>
-                                                <h2>@name.Title</h2>
+                                                <h2 class="temper_text_second">@name.Title</h2>
                                             </li>                                       
                                     }
                                 </ul>
